[package]
name = "dawnsearch"
version = "0.0.0"
edition = "2021"
default-run = "dawnsearch"

[features]
default = ["upnp"]
s3 = ["aws-config", "aws-sdk-s3"]
upnp = ["igd", "network-interface"]

[profile.release]
lto = "thin"

[lib]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-bert = "^0.21.0"
flate2 = "1.0.26"
url = "2.4.0"
whichlang = "0.1.0"
indicatif = "0.17.5"
tch = "^0.13.0"
readability = "0.2.0"
anyhow = { version = "1.0.72" }
html5ever = "0.25"
markup5ever_rcdom = "0.1"
rand = "0.8.5"
num = "0.4.1"
usearch = "0.22.3"
tokio = { version = "1.29.1", features = ["full"]}
urlencoding = "2.1.3"
cxx = "1.0.102"
html-escape = "0.2.13"
reqwest = "0.11.18"
aws-config = { version = "0.55.3", optional = true }
aws-sdk-s3 = { version = "0.28.0", optional = true }
tokio-util = { version = "0.7.8", features = ["io", "io-util"] }
rusqlite = { version = "0.29.0", features = ["bundled"] }
serde = "1.0.180"
rmp-serde = "1.1.2"
rmp = "0.8.12"
serde_bytes = "0.11.12"
igd = { version = "0.12.1", optional = true }
network-interface = { version = "1.0.1", optional = true }
smaz = "0.1.0"
